--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "scrollmagic": "~2.0.5"
   },
   "devDependencies": {
-    "retina.js": "retinajs#~1.3.0"
+    "retina.js": "retinajs#~1.3.0",
+    "slick": "*"
   }
 }
