--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "gsap": "~1.18.1",
-    "scrollmagic": "~2.0.5"
+    "scrollmagic": "~2.0.5",
+    "jquery-ui": "~1.11.4"
   },
   "devDependencies": {
     "retina.js": "retinajs#~1.3.0",
